# rust-punkt

./: Cargo.toml
examples/: eval_pretrained.rs
scripts/: refresh_punkt_data.py
src/: freqdist.rs  lib.rs  prelude.rs  token.rs  tokenizer.rs  trainer.rs  util.rs
src/data/: czech.json  danish.json  dutch.json  english.json  estonian.json  finnish.json  french.json  german.json  greek.json  italian.json  norwegian.json  polish.json  portuguese.json  slovene.json  spanish.json  swedish.json  turkish.json
