[package]
name            = "punkt"
version         = "2.0.0"
edition         = "2021"
authors         = ["Ferris Tseng <ferristseng@fastmail.fm>"]
keywords        = ["punkt", "sentence", "token", "tokenizer"]
license         = "MIT/Apache-2.0"
repository      = "https://github.com/ferristseng/rust-punkt"
description     = "An implementation of a Punkt sentence tokenizer"
readme          = "README.md"

[dependencies]
phf             = { version = "0.11", features = ["macros"] }
serde_json      = "1"

[dev-dependencies]
walkdir         = "2"
